--- a/moduleTwo.css
+++ b/moduleTwo.css
@@ -5,7 +5,6 @@
 }
 
 h1 {
-    color: red;
     text-align: center;
     margin-bottom: 40px;
 }
@@ -16,11 +15,13 @@ h1 {
     width: 30%;
     padding: 10px;
     position: relative;
+    background-color: lightgrey;
 }
 
 .chicken {
-    border: 1px solid;
-    background-color: pink;
+    border: 1px solid black;
+    background-color: brown;
+    color: white;
     width: 40%;
     text-align: center;
     font-weight: bold;
